--- a/1976_Makefile/Makefile
+++ b/1976_Makefile/Makefile
@@ -18,11 +18,11 @@ Cathy_baton.txt: Bob_baton.txt
 	cat Bob_baton.txt > Cathy_baton.txt
 	echo "Cathy passes the baton" >> Cathy_baton.txt
 
-Bob_baton.txt: Amy_baton.txt
+Bob_baton.txt: Alice_baton.txt
 	sleep 5
-	cat Amy_baton.txt > Bob_baton.txt
+	cat Alice_baton.txt > Bob_baton.txt
 	echo "Bob passes the baton" >> Bob_baton.txt
 
-Amy_baton.txt:
+Alice_baton.txt:
 	sleep 5
-	echo "Amy passes the baton" > Amy_baton.txt
+	echo "Alice passes the baton" > Alice_baton.txt
